--- a/homeContact.html
+++ b/homeContact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://tourism.com</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
-    <link href="css/index.css" rel="stylesheet"></link>
+    <link href="css/contact-home.css" rel="stylesheet"></link>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
@@ -15,68 +15,174 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="sectionHome">
-        <div class="page-website">
-            <nav class="navbar navbar-expand-lg navbar-light bg-white pt-3 pb-3">
-                <a class="navbar-brand pl-3" href="#">SID~LLY</a>
-                <button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto pl-3">
-                    <a class="nav-link page-website-items" href="./home.html">Home<span class="sr-only">(current)</span></a>
-                    <a class="nav-link page-website-items" href="./homeAbout.html">About</a>
-                    <div class="dropdown">
-                        <a class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Travel
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                          <li><a class="dropdown-item home-dropdown" href="./tour.html" target="_blank">Tours</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="./event.html" target="_blank">Event</a></li>
-                        </ul>
-                    </div>
-                    <a class="nav-link page-website-items" href="./privateVillas.html">PrivateVillas</a>
-                    <a class="nav-link page-website-items" href="./restaurant.html">Restaurant</a>
-                    <a class="nav-link page-website-items active" href="./homeContact.html">Contact us</a>
-                    <a class="nav-link page-website-items" href="./login.html">Login<i class="fa-solid fa-user login-logo"></i></a>
-                </div>
-                </div>
-            </nav>
-            <div class="tour-contact-bg-img">
-                <div class="col-md-7 tour-contact-container">
-                    <h1>Contact Us</h1>
-                    <p class="pb-5">For tour enquiries or any questions, please use the form below and we will get back to you.</p>
-                    <div class="tour-contact-main-box">
-                        <div class="col-md-3 tour-contact-each-box pt-3">
-                            <label for="tourFirstName">First Name</label>
-                            <input type="text" class="tour-contact-details" id="tourFirstName"/>
-                        </div>
-                        <div class="col-md-3 tour-contact-each-box pt-3">
-                            <label for="tourLastName">Last Name</label>
-                            <input type="text" class="tour-contact-details" id="tourLastName"/>
+    <div class="Home-contact-page">
+        <div class="home-nav-website">
+            <div class="page-website">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <nav class="navbar navbar-expand-lg navbar-light bg-white pt-3 pb-3">
+                                <a class="navbar-brand pl-3" href="#">SID~LLY</a>
+                                <button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav ml-auto pl-3">
+                                    <a class="nav-link page-website-items" href="./home.html">Home<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link page-website-items" href="./homeAbout.html">About</a>
+                                    <div class="dropdown">
+                                        <a class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                          Travel
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-menu-dark">
+                                          <li><a class="dropdown-item home-dropdown" href="./tour.html" target="_blank">Tours</a></li>
+                                          <li><hr class="dropdown-divider"></li>
+                                          <li><a class="dropdown-item" href="./event.html" target="_blank">Event</a></li>
+                                        </ul>
+                                    </div>
+                                    <a class="nav-link page-website-items" href="./privateVillas.html">PrivateVillas</a>
+                                    <a class="nav-link page-website-items" href="./restaurant.html">Restaurant</a>
+                                    <a class="nav-link page-website-items active" href="./homeContact.html">Contact us</a>
+                                    <a class="nav-link page-website-items" href="./login.html">Login<i class="fa-solid fa-user login-logo"></i></a>
+                                </div>
+                                </div>
+                            </nav>
                         </div>
                     </div>
-                    <div class="tour-contact-main-box">
-                        <div class="col-md-3 tour-contact-each-box pt-3">
-                            <label for="tourEmail">Email*</label>
-                            <input type="email" class="tour-contact-details" id="tourEmail"/>
-                        </div>
-                        <div class="col-md-3 tour-contact-each-box pt-3">
-                            <label for="tourSubject">Subject</label>
-                            <input type="text" class="tour-contact-details" id="tourSubject"/>
-                        </div>
-                    </div>
-                    <div class="tour-contact-main-box">
-                        <div class="col-md-8 tour-contact-each-box pt-3">
-                            <label for="tourLeaveUsMsg">leave us a message</label>
-                            <textarea type="textarea" class="tour-contact-details1" id="tourLeaveUsMsg"></textarea>
-                        </div>
-                    </div>
-                    <button class="btn btn-danger tour-contact-submit-btn mt-5">Submit</button>
                 </div>
             </div>
         </div>
+        <div class="card-dec">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="tour-contact-bg-img pt-5 pb-5">
+                            <div class="col-md-7 tour-contact-container">
+                                <h1>Contact Us</h1>
+                                <p class="pb-5">For tour enquiries or any questions, please use the form below and we will get back to you.</p>
+                                <div class="tour-contact-main-box">
+                                    <div class="col-md-3 tour-contact-each-box pt-3">
+                                        <label for="tourFirstName">First Name</label>
+                                        <input type="text" class="tour-contact-details" id="tourFirstName"/>
+                                    </div>
+                                    <div class="col-md-3 tour-contact-each-box pt-3">
+                                        <label for="tourLastName">Last Name</label>
+                                        <input type="text" class="tour-contact-details" id="tourLastName"/>
+                                    </div>
+                                </div>
+                                <div class="tour-contact-main-box">
+                                    <div class="col-md-3 tour-contact-each-box pt-3">
+                                        <label for="tourEmail">Email*</label>
+                                        <input type="email" class="tour-contact-details" id="tourEmail"/>
+                                    </div>
+                                    <div class="col-md-3 tour-contact-each-box pt-3">
+                                        <label for="tourSubject">Subject</label>
+                                        <input type="text" class="tour-contact-details" id="tourSubject"/>
+                                    </div>
+                                </div>
+                                <div class="tour-contact-main-box">
+                                    <div class="col-md-8 tour-contact-each-box pt-3">
+                                        <label for="tourLeaveUsMsg">leave us a message</label>
+                                        <textarea type="textarea" class="tour-contact-details1" id="tourLeaveUsMsg"></textarea>
+                                    </div>
+                                </div>
+                                <button class="btn btn-danger tour-contact-submit-btn mt-5">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="main-footer-bg-container">
+                            <div class="footer-container">
+                                <div class="footer-dec1 col-12 col-md-3 pb-3">
+                                    <P>Help Center</P>
+                                    <p>Fundraiser Kit</p>
+                                    <p>sid-lly Outreach PAN-AATGFHBBC</p>
+                                </div>
+                                <div class="footer-dec2 col-12 col-md-3 pb-3">
+                                    <h1>CONTACT US</h1>
+                                    <div class="mapicon-container">
+                                        <div class="mapicon">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0">
+                                                <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                                                <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                            </svg>
+                                        </div>
+                                        <div class="addressE1">Address:</div>
+                                    </div>
+                                    <address class="address-list pt-2">
+                                        <p>Velliangiri Foothills,</p>
+                                        <p>Sid-lly Post, Proddatur - 516360</p>
+                                        <p>Media Queries:<br><span class="adress-decoration">media@sid-lly.org</span></p>
+                                        <p>Email:<span class="adress-decoration">support@sidlly.org</span></p>
+                                    </address>
+                                    <div class="whatsapp-box">
+                                        <div class="mr-3">
+                                            <img src="https://static.ishaoutreach.org/static/assets/img/whatsapp.png?s=2">
+                                        </div>
+                                        <p><span class="whatapp-text">Whatsapp:</span><br>+917032814255</p>
+                                    </div>
+                                    <div class="phone-box">
+                                        <div class="callicon">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" fill="currentColor" class="bi bi-telephone" viewBox="0 0">
+                                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                                                </svg>
+                                            </div>
+                                            <p><span class="phone-icon">Phone:</span></p>
+                                        </div>
+                                        <p>+917032814255</p>
+                                    </div>
+                                </div>
+                                <div class="footer-dec3 col-12 col-md-3 pb-3">
+                                    <div class="app-icon-container">
+                                        <div class="app-icon mr-3">
+                                            <img src="https://static.ishaoutreach.org/sites/default/files/2019-08/white_4.svg">
+                                        </div>
+                                        <div class="app-icon">
+                                            <img src="https://static.ishaoutreach.org/sites/default/files/2019-08/white_3.svg">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="footer-dec4 col-12 col-md-3 pb-3">
+                                    <div class="socail-media-app-container">
+                                        <h1>FIND US ON SOCIAL MEDIA</h1>
+                                        <div class="media-app-list">
+                                            <div class="media-app mr-3">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="media-app mr-3">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                                                    <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="media-app mr-3">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+                                                    <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 bottom-footer-container pt-4 pb-3">
+                                <p>© 2019- 2023 Isha Outreach. All Rights Reserved.</p>
+                                <p>About Outreach</p>
+                                <p>Privacy </p>
+                                <p>Terms & Conditions</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>    
     <script src="js/index.js"></script>   
